# 03-trees

./: CHANGELOG.md  DList.hs  Datatypes.hs  TreeFolds.hs  cis5520-trees.cabal
